# vision-language-model-from-scratch

./: Notes.md  README.md  dataloader.py  inference.py  pyproject.toml  train.py
docs/: dataloader.md
models/: CLIP.py  ha_vlm.py  lm_head.py  moe.py  open_clipencoder.py  positional_embeddings.py  transformer.py  vision_encoder.py  vit.py  vlm.py
